implement HimnoPreview component

--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": ["expo-router"],
     "ios": {
       "supportsTablet": true
     },
