--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.76.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "expo-router": "~4.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
