--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "tailwindcss": "^3.4.15",
-    "expo-router": "~4.0.9"
+    "expo-router": "~4.0.11",
+    "react-native-screens": "~4.1.0",
+    "expo-linking": "~7.0.3",
+    "expo-constants": "~17.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
