--- a/eas.json
+++ b/eas.json
@@ -1,21 +1,24 @@
 {
+  "cli": {
+    "version": ">= 7.8.2",
+    "appVersionSource": "local"
+  },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
     "preview": {
+      "distribution": "internal"
+    },
+    "production": {},
+    "apk": {
       "android": {
         "buildType": "apk"
       }
-    },
-    "preview2": {
-      "android": {
-        "gradleCommand": ":app:assembleRelease"
-      }
-    },
-    "preview3": {
-      "developmentClient": true
-    },
-    "preview4": {
-      "distribution": "internal"
-    },
+    }
+  },
+  "submit": {
     "production": {}
   }
 }
